--- a/adrofx social-investing/adrofx.com/social-investing.html
+++ b/adrofx social-investing/adrofx.com/social-investing.html
@@ -477,7 +477,7 @@
           <div class="row justify-content-center align-items-center">
             <div class="col-lg-6 col-md-6">
               <picture>
-                <source srcset="/themes/custom/adrofx_theme/185/img/banner-separator__phone.webp" />
+                <source srcset="/themes/custom/adrofx_theme/185/img/banner-separator__phone.png" />
                 <img
                   class="img-fluid m-auto two-phone_shadow"
                   src="themes/custom/adrofx_theme/185/img/banner-separator__phone.png"
