--- a/adrofx social-investing/adrofx.com/social-investing.html
+++ b/adrofx social-investing/adrofx.com/social-investing.html
@@ -477,10 +477,10 @@
           <div class="row justify-content-center align-items-center">
             <div class="col-lg-6 col-md-6">
               <picture>
-                <source srcset="/themes/custom/adrofx_theme/185/img/banner-separator_phone.png" />
+                <source srcset="/cws/adrofx%20social-investing/adrofx.com/themes/custom/adrofx_theme/185/img/banner-separator_phone.png" />
                 <img
                   class="img-fluid m-auto two-phone_shadow"
-                  src="themes/custom/adrofx_theme/185/img/banner-separator_phone.png"
+                  src="/cws/adrofx%20social-investing/adrofx.com/themes/custom/adrofx_theme/185/img/banner-separator_phone.png"
                   alt="two phones with trading chart"
                   width="390"
                   height="465"
